# northroot-kernel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-MIT  README.md  RELEASE_GUIDE.md  deny.toml  justfile
.codex/environments/: environment.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  labeler.yml  signature-policy.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  signature-policy.yml
apps/northroot/: Cargo.toml  event.json
apps/northroot/src/: main.rs
apps/northroot/src/commands/: append.rs  mod.rs  verify.rs
crates/northroot-canonical/: AGENTS.md  Cargo.toml
crates/northroot-canonical/examples/: generator.rs
crates/northroot-canonical/src/: canonicalizer.rs  digest.rs  event_id.rs  hygiene.rs  identifiers.rs  lib.rs  quantities.rs  validation.rs
crates/northroot-canonical/tests/: golden.rs
crates/northroot-cli/: Cargo.toml  README.md
crates/northroot-cli/src/: main.rs  output.rs
crates/northroot-cli/src/commands/: canonicalize.rs  checkpoint.rs  gen.rs  get.rs  inspect.rs  list.rs  mod.rs  verify.rs
crates/northroot-cli/tests/: integration.rs
crates/northroot-core/src/: event_id.rs  events.rs  lib.rs  shared.rs  verification.rs
crates/northroot-core/tests/: verification.rs
crates/northroot-journal/: Cargo.toml  README.md  events.nrj
crates/northroot-journal/src/: errors.rs  event.rs  frame.rs  lib.rs  reader.rs  verification.rs  writer.rs
crates/northroot-journal/tests/: integration.rs  resilience.rs  verification.rs
crates/northroot-schemas/: Cargo.toml
crates/northroot-schemas/schemas/: attestation.schema.json  checkpoint.schema.json
crates/northroot-schemas/src/: attestation.rs  checkpoint.rs  lib.rs  signature.rs
crates/northroot-store/src/: error.rs  filter.rs  lib.rs  typed.rs  view.rs
crates/northroot-store/tests/: integration.rs
docs/: API_CONTRACT.md  CORE_MODEL.md  FORMAT.md  SPEC.md
docs/developer/: api-contract.md  architecture.md  extending.md  testing.md
docs/events/: CORE_EVENTS.md
docs/operator/: deployment.md
docs/qa/: harness.md
docs/reference/: events.md  format.md  platform.md
docs/security/: signing-policy.md  threat-model.json  threat-model.md
docs/user/: getting-started.md  integration-examples.md
schemas/: README.md
schemas/canonical/v1/: types.schema.json
schemas/events/v1/: authorization_event.schema.json  execution_event.schema.json  reconciliation_acceptance_event.schema.json  reconciliation_event.schema.json
schemas/platform/v1/: economic_event.schema.json  ids.schema.json  intent.schema.json  receipt.schema.json
scripts/: codex_setup.sh  codex_verify.sh  install_git_hooks.sh  release-check.sh  validate_schemas.py
wip/agent-domain/: README.md  errors.rs  verification.rs
