[package]
name = "northroot-canonical"
version = "0.1.0"
edition = "2021"
description = "Canonical data model primitives shared across Northroot artifacts."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
canonical_json = "0.5"
regex = "1"
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"

