[package]
name = "northroot-cli"
version = "0.1.0"
edition = "2021"
authors = ["Northroot Contributors"]
license = "Apache-2.0 OR MIT"
description = "Command-line interface for Northroot event storage and verification"

[[bin]]
name = "northroot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
northroot-store = { path = "../northroot-store" }
northroot-core = { path = "../northroot-core" }
northroot-canonical = { path = "../northroot-canonical" }

[dev-dependencies]
tempfile = "3.8"

