[package]
name = "northroot-cli"
version = "1.0.0"
edition = "2021"
authors = ["Northroot Contributors"]
license = "Apache-2.0 OR MIT"
description = "Command-line interface for Northroot event storage and verification"

[[bin]]
name = "northroot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
northroot-canonical = { path = "../northroot-canonical" }
northroot-journal = { path = "../northroot-journal" }
northroot-schemas = { path = "../northroot-schemas" }

[features]
default = []
dev-tools = []

[dev-dependencies]
tempfile = "3.8"

