[package]
name = "northroot-journal"
version = "1.2.0"
edition = "2021"
authors = ["Northroot Contributors"]
license = "Apache-2.0 OR MIT"
description = "Append-only journal format for canonical Northroot events"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
northroot-canonical = { path = "../northroot-canonical" }

[dev-dependencies]
tempfile = "3.8"

