[package]
name = "northroot-schemas"
version = "1.0.0"
edition = "2021"
description = "Domain-agnostic governance event schemas for Northroot"
license = "MIT OR Apache-2.0"

[dependencies]
northroot-canonical = { path = "../northroot-canonical" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

